Modify stage size and center

--- a/ChatBotFX/src/main/resources/org/gui/chat.fxml
+++ b/ChatBotFX/src/main/resources/org/gui/chat.fxml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="530.0" prefWidth="850.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label text="Ca marche" />
+      <VBox prefHeight="526.0" prefWidth="250.0" style="-fx-background-color: red;" />
+      <VBox prefHeight="526.0" prefWidth="631.0" style="-fx-background-color: blue;" />
    </children>
-</VBox>
+</HBox>
